# streamwerk

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  persons.csv  rust-toolchain.toml
.github/workflows/: rust.yml
etl/: Cargo.toml
etl-csv/: Cargo.toml
etl-csv/src/: lib.rs  prelude.rs
etl-debug/: Cargo.toml
etl-debug/src/: main.rs
etl-fs/: Cargo.toml
etl-fs/src/: lib.rs  prelude.rs
etl-sse/: Cargo.toml
etl-sse/examples/: sse_pipeline.rs
etl-sse/src/: lib.rs  prelude.rs
etl/src/: lib.rs  load.rs  pipeline.rs  prelude.rs  transform.rs
streamwerk/: Cargo.toml
streamwerk-csv/: Cargo.toml
streamwerk-csv/src/: lib.rs  prelude.rs
streamwerk-debug/: Cargo.toml
streamwerk-debug/src/: main.rs
streamwerk-fs/: Cargo.toml
streamwerk-fs/src/: lib.rs  prelude.rs
streamwerk-sql/: .envrc  Cargo.toml  README.md
streamwerk-sql/docker/: Dockerfile  README.md  docker-compose.yml  init.sql
streamwerk-sql/src/: lib.rs  prelude.rs
streamwerk-sql/tests/: integration_test.rs
streamwerk-sse/: Cargo.toml
streamwerk-sse/src/: lib.rs  prelude.rs
streamwerk/src/: extract.rs  lib.rs  load.rs  pipeline.rs  prelude.rs  transform.rs
