[workspace]
resolver = "3"
members = [
    "streamwerk", "streamwerk-csv", "streamwerk-debug", "streamwerk-fs", "streamwerk-sse",
]


[workspace.package]
edition = "2024"
authors = ["Markus Klink <justjoheinz@gmail.com>"]
repository = "https://github.com/justjoheinz/streamwerk"
license = "MIT OR Apache-2.0"
rust-version = "1.79"

[workspace.dependencies]
tokio = {version = "1.48.0", features = ["full"]}
tokio-stream = "0.1"
anyhow = "1"
futures = "0.3"
async-stream = "0.3"
pin-project = "1"
