[package]
name = "etl-csv"
version = "0.1.0"
edition = "2024"

[dependencies]
etl = { path = "../etl" }
tokio = {workspace = true}
tokio-stream = { workspace = true }
anyhow = { workspace = true }
csv-line = "0.3"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
