[package]
name = "etl-debug"
version = "0.1.0"
edition = "2024"
description = "Example programs demonstrating the ETL framework capabilities"
keywords = ["etl", "examples", "demo", "pipeline", "data-processing"]

[dependencies]
etl = { path = "../etl" }
etl-fs = { path = "../etl-fs" }
etl-csv = { path = "../etl-csv" }
etl-sse = { path = "../etl-sse" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
