[package]
name = "etl-fs"
version = "0.1.0"
edition = "2024"
description = "Filesystem extractors and loaders for the ETL framework (files, stdin, stdout)"
keywords = ["etl", "filesystem", "io", "stdin", "stdout"]

[dependencies]
etl = { path = "../etl" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
