[package]
name = "etl-sse"
version = "0.1.0"
edition = "2024"
description = "Server-Sent Events (SSE) extractor for the ETL framework"
keywords = ["etl", "sse", "server-sent-events", "streaming", "http"]

[dependencies]
etl = { path = "../etl" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
reqwest = { version = "0.12", features = ["stream"] }
sse-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
