[package]
name = "streamwerk-csv"
edition = "2024"
version.workspace = true
authors.workspace = true
repository.workspace = true
description = "CSV and JSONL serialization/deserialization transformers for streamwerk"
keywords = ["streamwerk", "csv", "json", "jsonl", "serde"]

[dependencies]
streamwerk = { path = "../streamwerk" }
tokio = {workspace = true}
tokio-stream = { workspace = true }
anyhow = { workspace = true }
csv-line = "0.3"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
