[package]
name = "streamwerk-debug"
version = "0.1.0"
edition = "2024"
description = "Example programs demonstrating streamwerk capabilities"
keywords = ["streamwerk", "examples", "demo", "pipeline", "data-processing"]

[dependencies]
streamwerk = { path = "../streamwerk" }
streamwerk-fs = { path = "../streamwerk-fs" }
streamwerk-csv = { path = "../streamwerk-csv" }
streamwerk-sse = { path = "../streamwerk-sse" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
