[package]
name = "streamwerk-fs"
version = {workspace = true}
authors.workspace = true
repository.workspace = true
edition = "2024"
description = "Filesystem extractors and loaders for streamwerk (files, stdin, stdout)"
keywords = ["streamwerk", "filesystem", "io", "stdin", "stdout"]

[dependencies]
streamwerk = { path = "../streamwerk" }
tokio = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "io-util", "io-std", "fs"] }
tokio-stream = { workspace = true, features = ["io-util"] }
anyhow = { workspace = true }
futures = { workspace = true }
async-stream = {workspace = true}
