[package]
name = "streamwerk-sse"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition = "2024"
description = "Server-Sent Events (SSE) extractor for streamwerk"
keywords = ["streamwerk", "sse", "server-sent-events", "streaming", "http"]

[dependencies]
streamwerk = { path = "../streamwerk" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
reqwest = { version = "0.12", features = ["stream"] }
sse-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
