[package]
name = "streamwerk"
version = "0.1.0"
edition = "2024"
description = "Composable async stream-based ETL framework with Extract, Transform, and Load phases"
keywords = ["etl", "pipeline", "stream", "async", "data-processing"]

[dependencies]
futures = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
anyhow = {workspace = true}
async-stream = {workspace = true}