[package]
name = "streamwerk"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition = "2024"
description = "Composable async stream-based ETL framework with Extract, Transform, and Load phases"
keywords = ["etl", "pipeline", "stream", "async", "data-processing"]

[dependencies]
futures = {workspace = true}
tokio = {workspace = true, default-features = false, features = ["sync", "macros", "rt", "time"]}
tokio-stream = {workspace = true, default-features = false, features = ["time"]}
anyhow = {workspace = true}
async-stream = {workspace = true}
